# Afwezigheid

./: INSTALL.md  README.md  app.py  docker-compose.yml  pyproject.toml
afwezigheid/: app.py  models.py  pyproject.toml
afwezigheid/templates/: base.html  index.html  login.html
sql/: data.sql  init.sql  insert_test_data.sql
templates/: base.html  index.html  login.html
