[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afwezigheid"
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.8"
dependencies = [
    "mysql-connector-python",
    "flask",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
